# depictio-docs

./: .gitignore  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  404.html  README.md  beta  dev  index.html  mike-mkdocsgq5qcngk.yml  mkdocs.yml  prerequisites.md  pyproject.toml  sitemap.xml  update_openapi.py  use_cases.md  versions.json
.claude/: settings.local.json
0.6.0/: 404.html  index.html  sitemap.xml
0.7.0-b1/: 404.html  index.html  sitemap.xml
0.9.0/: 404.html  index.html  sitemap.xml
api/: index.html
architecture/: index.html
contributing/: index.html
docs/: animated-logo.md  architecture.md  contributing.md  documentation_outline.md  get_started.md  index.md  modularity.md
get_started/: index.html
modularity/: index.html
overrides/: main.html
prerequisites/: index.html
search/: search_index.json
stylesheets/: extra.css
use_cases/: index.html
v0.0.1/: 404.html  index.html  sitemap.xml
v0.0.3/: 404.html  index.html  sitemap.xml
v0.0.4/: 404.html  index.html  sitemap.xml
v0.0.5/: 404.html  index.html  sitemap.xml
v0.0.6/: 404.html  index.html  sitemap.xml
v0.1.0/: 404.html  index.html  sitemap.xml
v0.1.1/: 404.html  index.html  sitemap.xml
v0.10.0/: 404.html  index.html  sitemap.xml
v0.10.1/: 404.html  index.html  sitemap.xml
v0.10.2/: 404.html  index.html  sitemap.xml
v0.10.3/: 404.html  index.html  sitemap.xml
v0.11.0/: 404.html  index.html  sitemap.xml
v0.11.1/: 404.html  index.html  sitemap.xml
v0.11.2/: 404.html  index.html  sitemap.xml
v0.12.0/: 404.html  index.html  sitemap.xml
(+6795 files in other folders)
