[project]
dependencies = [
    "mkdocstrings-python",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocs-render-swagger-plugin",
    "mkdocs-typer",
    "mkdocs-swagger-ui-tag",
    "mike",
    "neoteroi-mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "pre-commit"
]
version = "0.3.0"
name = "depictio-docs"
