[project]
dependencies = [
    "mkdocstrings-python",
    "mkdocs",
    "mkdocs-material>=9.7.0",
    "mkdocs-material-extensions",
    "mkdocs-render-swagger-plugin",
    "mkdocs-typer",
    "mkdocs-swagger-ui-tag",
    "mike",
    "neoteroi-mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "pre-commit",
    "mkdocs-inline-select-svg-plugin",
    "mkdocs-kroki-plugin",
    "mkdocs-graphviz"
]
version = "0.6.2-b2"
name = "depictio-docs"
